--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -13,7 +13,7 @@
 </div>
   <div class="ticket" id="ticket">
       <p><span class="date">Editar articulo</span></p>
-      <p id="notice"><%= notice %></p>
+      <span class="notice"><%= notice %></span>
 
     <%= render 'form' %>
   </div>
