--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,9 @@
                 <li><a href="/events" class="border-rigth">
                     <i class="icon-us">Eventos</i>
                 </a></li>
+                <li><a href="/recargas" class="border-rigth">
+                    <i class="icon-us">Recargas</i>
+                </a></li>
             </ul>
         </div>
         <div class="right link-coco">
