--- a/app/views/stock/admin.html.erb
+++ b/app/views/stock/admin.html.erb
@@ -1,3 +1,7 @@
+ <div class="ticket" id="ticket">
+  </div>
+<div class="layout">
+  <section class="float-rigth" >
 <h1>
 	Estadisticas de venta
 	(github like)
@@ -21,3 +25,7 @@
 <h1>
 	Estadisticas de hora y dia
 </h1>
+  </section>
+</div>
+ 
+    
