--- a/app/views/stock/events.html.erb
+++ b/app/views/stock/events.html.erb
@@ -1,5 +1,14 @@
-<h1>
+
+ <div class="ticket" id="ticket">
+  </div>
+<div class="layout">
+  <section class="float-rigth" >
+  <h1>
 	Debemos tener memoria de las cosas que sucedieron
 	como aumento de alguna mercancia etc
 	moderado por etiquetas parece ser una buena idea 
 </h1>
+  </section>
+</div>
+ 
+    
