--- a/app/views/stock/stock.html.erb
+++ b/app/views/stock/stock.html.erb
@@ -8,10 +8,10 @@
       <li><span>Categorias</span></li>
       <li><span>Antiguos</span></li>
       <li class="stockSearch">
-        <div>
+        <span>
               <%= link_to 'Nuevo Elemento', new_item_path %>
 
-        </div>
+        </span>
       </li>
       </ul>
     </div>
