--- a/public/assets/css/new.css
+++ b/public/assets/css/new.css
@@ -51,7 +51,7 @@ a, a:visited, a:focus, a:active {
 
 header,nav {
 	color :white;
-	height: 63px;
+	height: 7%;
 	width: 100%;
 	z-index: 50;
 }
@@ -353,7 +353,7 @@ padding: 2%;
 }
 
 .links a {
-	width: 20%;
+	width: 19%;
 }
 
 li a i {
