--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -85,9 +85,10 @@
   <section class="float-rigth" >
   <div class="bar ">
       <ul class="clearfix">
-      <li><a href="/admin/reports?details=week"><span >Semanal</span></a></li>
-      <li><a href="/admin/reports?details=month"><span >Mensual</span></a></li>
-      <li><a href="/admin/reports?details=year"><span >Anual</span></a></li>
+      <li><a href="/admin/reports"><span >Hoy</span></a></li>
+      <li><a href="/admin/reports?details=week"><span >Semana</span></a></li>
+      <li><a href="/admin/reports?details=month"><span > Mes</span></a></li>
+      <li><a href="/admin/reports?details=year"><span >Año</span></a></li>
 
       <li class="stockSearch">
         <span>
