--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
                 <li><a href="/items?sort=last">
                 <i class="icon-dest">Stock</i>
                 </a></li>
-                <li><a href="/admin/reports?details=week">
+                <li><a href="/admin/reports">
                     <i class="icon-prom">Administración</i>
                 </a></li>
                 <li><a href="/events" class="border-rigth">
