--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
                     <i class="icon-prom">Administración</i>
                 </a></li>
                 <li><a href="/events" class="border-rigth">
-                    <i class="icon-us">Eventos</i>
+                    <i class="icon-us">Notas</i>
                 </a></li>
                 <li><a href="/recargas" class="border-rigth">
                     <i class="icon-us">Recargas</i>
