--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -1,62 +1,5 @@
-<style>
-
-      body {
-        font: 1.1em sans-serif;
-      }
-
-      #chart{
-        width: 800px;
-        margin: 0 auto;
-      }
-      .background {
-        fill: #eee;
-      }
-
-      line {
-        stroke: #fff;
-      }
-
-      text.active {
-        fill: red;
-      }
-
-      .day {
-        fill: #fff;
-        stroke: #ccc;
-      }
-
-      .month {
-        fill: none;
-        stroke: #fff;
-        stroke-width: 4px;
-      }
-      .year-title {
-        font-size: 1.5em;
-      }
-
-      /* color ranges */
-      .RdYlGn .q0-11{fill:rgb(165,0,38)}
-      .RdYlGn .q1-11{fill:rgb(215,48,39)}
-      .RdYlGn .q2-11{fill:rgb(244,109,67)}
-      .RdYlGn .q3-11{fill:rgb(253,174,97)}
-      .RdYlGn .q4-11{fill:rgb(254,224,139)}
-      .RdYlGn .q5-11{fill:rgb(255,255,191)}
-      .RdYlGn .q6-11{fill:rgb(217,239,139)}
-      .RdYlGn .q7-11{fill:rgb(166,217,106)}
-      .RdYlGn .q8-11{fill:rgb(102,189,99)}
-      .RdYlGn .q9-11{fill:rgb(26,152,80)}
-      .RdYlGn .q10-11{fill:rgb(0,104,55)}
-
-      /* hover info */
-      #tooltip {
-        background-color: #fff;
-        border: 2px solid #ccc;
-        padding: 10px;
-      }
-
-    </style>
-
-
+<script src="/assets/js/d3.min.js"></script>
+<script src="/assets/js/reportController.js"></script>
 <div class="layout">
   <section class="float-rigth" >
   <div class="bar ">
@@ -74,7 +17,7 @@
       </ul>
     </div>
     <div class="grid top50" id="reports">
-    <% if @reports %>
+    <% if @bars %>
     <div class="little item">
       <strong class="number"><a href="/stock?sort=id">#</a></strong>
       <strong class="code ">Código</strong>
@@ -87,6 +30,134 @@
 
     </ul>
     <% end %>
+
+    <meta charset="utf-8">
+<style>
+
+body {
+  font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.bar {
+  fill: orange;
+}
+
+.bar:hover {
+  fill: orangered ;
+}
+
+.x.axis path {
+  display: none;
+}
+
+.d3-tip {
+  line-height: 1;
+  font-weight: bold;
+  padding: 12px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 2px;
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.8);
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+}
+
+/* Style northward tooltips differently */
+.d3-tip.n:after {
+  margin: -1px 0 0 0;
+  top: 100%;
+  left: 0;
+}
+</style>
+<div id="graphs ">
+<script>
+
+var margin = {top: 40, right: 20, bottom: 30, left: 40},
+    width = 960 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
+
+var formatPercent = d3.format(".0%");
+
+var x = d3.scale.ordinal()
+    .rangeRoundBands([0, width], .1);
+
+var y = d3.scale.linear()
+    .range([height, 0]);
+
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom");
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left")
+    .tickFormat(formatPercent);
+
+var tip = {};
+
+var svg = d3.select("#graphs").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+
+
+d3.tsv("data.tsv", type, function(error, data) {
+  x.domain(data.map(function(d) { return d.letter; }));
+  y.domain([0, d3.max(data, function(d) { return d.frequency; })]);
+
+  svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis);
+
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 6)
+      .attr("dy", ".71em")
+      .style("text-anchor", "end")
+      .text("Frequency");
+
+  svg.selectAll(".bar")
+      .data(data)
+    .enter().append("rect")
+      .attr("class", "bar")
+      .attr("x", function(d) { return x(d.letter); })
+      .attr("width", x.rangeBand())
+      .attr("y", function(d) { return y(d.frequency); })
+      .attr("height", function(d) { return height - y(d.frequency); })
+      .on('mouseover', tip.show)
+      .on('mouseout', tip.hide)
+
+});
+
+function type(d) {
+  d.frequency = +d.frequency;
+  return d;
+}
+
+</script>
     </div>
     
       
@@ -110,5 +181,3 @@
   </div>
  
     
-<script src="/assets/js/d3.min.js"></script>
-<script src="/assets/js/reportController.js"></script>
