--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -224,7 +224,7 @@ color: rgb(255, 255, 255);
   border: 1px solid rgba(51,51,51,0.36);
   color: #fff;
   text-shadow: 0 1px rgba(0,0,0,0.3);
-  background-color: rgba(255, 58, 49, 0.9);
+  background-color: rgb(0, 230, 118);
 
   }
   .rc-button-submit:active {
