--- a/public/assets/css/new.css
+++ b/public/assets/css/new.css
@@ -91,7 +91,7 @@ header,nav {
 	height: 100%;
 	width: 150px;
 	vertical-align: middle;
-	border-bottom: 1px solid rgb(255, 58, 49);
+	border-bottom: 1px solid rgb(0, 230, 118);
 	overflow: hidden;
 	color: rgb(255, 255, 255);
 	background-repeat: no-repeat;
@@ -246,7 +246,7 @@ text-align: center;
 }
 
 ul li a:hover{
-	background-color: rgba(255, 58, 49, 0.9);
+	background-color: rgb(0, 230, 118);
 	color: white;
 	cursor: pointer;
 }
@@ -309,7 +309,7 @@ padding: 2%;
 }
 
 .active {
-	background-color: rgba(255, 58, 49, 0.9);
+	background-color: rgb(0, 230, 118);
 	color: white;
 }
 
