--- a/app/views/logins/login.html.erb
+++ b/app/views/logins/login.html.erb
@@ -1,47 +1,124 @@
-<html lang="es"><head>
-  <meta charset="utf-8">  
-  <head>
-    <link rel="stylesheet" type="text/css" href="/assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="/assets/css/login.css">
-  </head>
-  <div class="wrapper">
+<html lang="de" slick-uniqueid="3" class="lang-de" hola_ext_inject="disabled"><head>
+  <meta charset="utf-8">
+  <meta name="google" value="notranslate">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge, requiresActiveX=true">
+  <!--[if lte IE 8]>
+  <meta http-equiv="refresh" content="0;url=/error/browser-not-supported.php">
+  <![endif]-->
+  <title>Stock</title>
 
-  <div class="main content clearfix" >
-  <div class="banner top">
-  <h1><i class="logo"></i></h1>
-   <% if flash[:alert] %>
-        <h2 class="notice"><%= flash[:alert] %></h2>
-    <% else %>
-      <h2>Ingresa tus credenciales para comenzar</h2>
+  <link rel="stylesheet" href="/assets/css/login.css" media="all">
 
-  <% end %>
-      
+<style type="text/css">:root #ads > .dose > .dosesingle
+{display:none !important;}</style><style type="text/css">.fb_hidden{position:absolute;top:-10000px;z-index:10001}.fb_reposition{overflow-x:hidden;position:relative}.fb_invisible{display:none}.fb_reset{background:none;border:0;border-spacing:0;color:#000;cursor:auto;direction:ltr;font-family:"lucida grande", tahoma, verdana, arial, sans-serif;font-size:11px;font-style:normal;font-variant:normal;font-weight:normal;letter-spacing:normal;line-height:1;margin:0;overflow:visible;padding:0;text-align:left;text-decoration:none;text-indent:0;text-shadow:none;text-transform:none;visibility:visible;white-space:normal;word-spacing:normal}.fb_reset>div{overflow:hidden}.fb_link img{border:none}
+.fb_dialog{background:rgba(82, 82, 82, .7);position:absolute;top:-10000px;z-index:10001}.fb_reset .fb_dialog_legacy{overflow:visible}.fb_dialog_advanced{padding:10px;-moz-border-radius:8px;-webkit-border-radius:8px;border-radius:8px}.fb_dialog_content{background:#fff;color:#333}.fb_dialog_close_icon{background:url(https://static.xx.fbcdn.net/rsrc.php/v2/yq/r/IE9JII6Z1Ys.png) no-repeat scroll 0 0 transparent;_background-image:url(https://static.xx.fbcdn.net/rsrc.php/v2/yL/r/s816eWC-2sl.gif);cursor:pointer;display:block;height:15px;position:absolute;right:18px;top:17px;width:15px}.fb_dialog_mobile .fb_dialog_close_icon{top:5px;left:5px;right:auto}.fb_dialog_padding{background-color:transparent;position:absolute;width:1px;z-index:-1}.fb_dialog_close_icon:hover{background:url(https://static.xx.fbcdn.net/rsrc.php/v2/yq/r/IE9JII6Z1Ys.png) no-repeat scroll 0 -15px transparent;_background-image:url(https://static.xx.fbcdn.net/rsrc.php/v2/yL/r/s816eWC-2sl.gif)}.fb_dialog_close_icon:active{background:url(https://static.xx.fbcdn.net/rsrc.php/v2/yq/r/IE9JII6Z1Ys.png) no-repeat scroll 0 -30px transparent;_background-image:url(https://static.xx.fbcdn.net/rsrc.php/v2/yL/r/s816eWC-2sl.gif)}.fb_dialog_loader{background-color:#f6f7f8;border:1px solid #606060;font-size:24px;padding:20px}.fb_dialog_top_left,.fb_dialog_top_right,.fb_dialog_bottom_left,.fb_dialog_bottom_right{height:10px;width:10px;overflow:hidden;position:absolute}.fb_dialog_top_left{background:url(https://static.xx.fbcdn.net/rsrc.php/v2/ye/r/8YeTNIlTZjm.png) no-repeat 0 0;left:-10px;top:-10px}.fb_dialog_top_right{background:url(https://static.xx.fbcdn.net/rsrc.php/v2/ye/r/8YeTNIlTZjm.png) no-repeat 0 -10px;right:-10px;top:-10px}.fb_dialog_bottom_left{background:url(https://static.xx.fbcdn.net/rsrc.php/v2/ye/r/8YeTNIlTZjm.png) no-repeat 0 -20px;bottom:-10px;left:-10px}.fb_dialog_bottom_right{background:url(https://static.xx.fbcdn.net/rsrc.php/v2/ye/r/8YeTNIlTZjm.png) no-repeat 0 -30px;right:-10px;bottom:-10px}.fb_dialog_vert_left,.fb_dialog_vert_right,.fb_dialog_horiz_top,.fb_dialog_horiz_bottom{position:absolute;background:#525252;filter:alpha(opacity=70);opacity:.7}.fb_dialog_vert_left,.fb_dialog_vert_right{width:10px;height:100%}.fb_dialog_vert_left{margin-left:-10px}.fb_dialog_vert_right{right:0;margin-right:-10px}.fb_dialog_horiz_top,.fb_dialog_horiz_bottom{width:100%;height:10px}.fb_dialog_horiz_top{margin-top:-10px}.fb_dialog_horiz_bottom{bottom:0;margin-bottom:-10px}.fb_dialog_iframe{line-height:0}.fb_dialog_content .dialog_title{background:#6d84b4;border:1px solid #3a5795;color:#fff;font-size:14px;font-weight:bold;margin:0}.fb_dialog_content .dialog_title>span{background:url(https://static.xx.fbcdn.net/rsrc.php/v2/yd/r/Cou7n-nqK52.gif) no-repeat 5px 50%;float:left;padding:5px 0 7px 26px}body.fb_hidden{-webkit-transform:none;height:100%;margin:0;overflow:visible;position:absolute;top:-10000px;left:0;width:100%}.fb_dialog.fb_dialog_mobile.loading{background:url(https://static.xx.fbcdn.net/rsrc.php/v2/ya/r/3rhSv5V8j3o.gif) white no-repeat 50% 50%;min-height:100%;min-width:100%;overflow:hidden;position:absolute;top:0;z-index:10001}.fb_dialog.fb_dialog_mobile.loading.centered{width:auto;height:auto;min-height:initial;min-width:initial;background:none}.fb_dialog.fb_dialog_mobile.loading.centered #fb_dialog_loader_spinner{width:100%}.fb_dialog.fb_dialog_mobile.loading.centered .fb_dialog_content{background:none}.loading.centered #fb_dialog_loader_close{color:#fff;display:block;padding-top:20px;clear:both;font-size:18px}#fb-root #fb_dialog_ipad_overlay{background:rgba(0, 0, 0, .45);position:absolute;left:0;top:0;width:100%;min-height:100%;z-index:10000}#fb-root #fb_dialog_ipad_overlay.hidden{display:none}.fb_dialog.fb_dialog_mobile.loading iframe{visibility:hidden}.fb_dialog_content .dialog_header{-webkit-box-shadow:white 0 1px 1px -1px inset;background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#738ABA), to(#2C4987));border-bottom:1px solid;border-color:#1d4088;color:#fff;font:14px Helvetica, sans-serif;font-weight:bold;text-overflow:ellipsis;text-shadow:rgba(0, 30, 84, .296875) 0 -1px 0;vertical-align:middle;white-space:nowrap}.fb_dialog_content .dialog_header table{-webkit-font-smoothing:subpixel-antialiased;height:43px;width:100%}.fb_dialog_content .dialog_header td.header_left{font-size:12px;padding-left:5px;vertical-align:middle;width:60px}.fb_dialog_content .dialog_header td.header_right{font-size:12px;padding-right:5px;vertical-align:middle;width:60px}.fb_dialog_content .touchable_button{background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#4966A6), color-stop(.5, #355492), to(#2A4887));border:1px solid #2f477a;-webkit-background-clip:padding-box;-webkit-border-radius:3px;-webkit-box-shadow:rgba(0, 0, 0, .117188) 0 1px 1px inset, rgba(255, 255, 255, .167969) 0 1px 0;display:inline-block;margin-top:3px;max-width:85px;line-height:18px;padding:4px 12px;position:relative}.fb_dialog_content .dialog_header .touchable_button input{border:none;background:none;color:#fff;font:12px Helvetica, sans-serif;font-weight:bold;margin:2px -12px;padding:2px 6px 3px 6px;text-shadow:rgba(0, 30, 84, .296875) 0 -1px 0}.fb_dialog_content .dialog_header .header_center{color:#fff;font-size:16px;font-weight:bold;line-height:18px;text-align:center;vertical-align:middle}.fb_dialog_content .dialog_content{background:url(https://static.xx.fbcdn.net/rsrc.php/v2/y9/r/jKEcVPZFk-2.gif) no-repeat 50% 50%;border:1px solid #555;border-bottom:0;border-top:0;height:150px}.fb_dialog_content .dialog_footer{background:#f6f7f8;border:1px solid #555;border-top-color:#ccc;height:40px}#fb_dialog_loader_close{float:left}.fb_dialog.fb_dialog_mobile .fb_dialog_close_button{text-shadow:rgba(0, 30, 84, .296875) 0 -1px 0}.fb_dialog.fb_dialog_mobile .fb_dialog_close_icon{visibility:hidden}#fb_dialog_loader_spinner{animation:rotateSpinner 1.2s linear infinite;background-color:transparent;background-image:url(https://static.xx.fbcdn.net/rsrc.php/v2/yD/r/t-wz8gw1xG1.png);background-repeat:no-repeat;background-position:50% 50%;height:24px;width:24px}@keyframes rotateSpinner{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}
+.fb_iframe_widget{display:inline-block;position:relative}.fb_iframe_widget span{display:inline-block;position:relative;text-align:justify}.fb_iframe_widget iframe{position:absolute}.fb_iframe_widget_fluid_desktop,.fb_iframe_widget_fluid_desktop span,.fb_iframe_widget_fluid_desktop iframe{max-width:100%}.fb_iframe_widget_fluid_desktop iframe{min-width:220px;position:relative}.fb_iframe_widget_lift{z-index:1}.fb_hide_iframes iframe{position:relative;left:-10000px}.fb_iframe_widget_loader{position:relative;display:inline-block}.fb_iframe_widget_fluid{display:inline}.fb_iframe_widget_fluid span{width:100%}.fb_iframe_widget_loader iframe{min-height:32px;z-index:2;zoom:1}.fb_iframe_widget_loader .FB_Loader{background:url(https://static.xx.fbcdn.net/rsrc.php/v2/y9/r/jKEcVPZFk-2.gif) no-repeat;height:32px;width:32px;margin-left:-16px;position:absolute;left:50%;z-index:4}</style></head>
+<!--[if IE 9]> <body class="ie9 m-MX " > <![endif]-->
+<!--[if gt IE 9]><!--> <body class="m-MX login"> <!--<![endif]-->
+
+  <div id="fb-root" class=" fb_reset"><div style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div><iframe name="fb_xdm_frame_https" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" title="Facebook Cross Domain Communication Frame" aria-hidden="true" tabindex="-1" id="fb_xdm_frame_https" src="https://s-static.ak.facebook.com/connect/xd_arbiter.php?version=42#channel=f1a9cf3684&amp;origin=https%3A%2F%2Fplay.spotify.com" style="border: none;"></iframe></div></div><div style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div></div></div></div>
+  <div id="wrapper">
+    <div id="main-nav" class="main-menu narrow-menu">
+      <a href="/" id="logo" class="logo"></a>
+      <ul id="nav-items" class="main-menu-nav"></ul>
+      <div id="core">
+        <div id="bridge"></div>
+        <div id="player"></div>
+        <div id="html5audio"></div>
+      </div>
+    </div>
+    <form tabindex="-1" id="settings" class="popup-area left popover arrow-left arrow-position-bottom">
+      <div class="initial section">
+        <div id="tr-loading" class="description">Laden</div>
+      </div>
+      <div class="user-settings"><!-- User based settings will be added here --></div>
+      <div class="section bottom">
+        <div class="description">
+            <a id="about-link" href="/about" data-href="about">Über uns</a> &nbsp;|&nbsp;
+            <a id="legal-link" href="https://www.spotify.com/legal/end-user-agreement/?utm_source=web-player" target="_blank">Rechtliches</a> &nbsp;|&nbsp;
+            <a id="help-link" href="/redirect/www/help" target="_blank">Hilfe</a>
+        </div>
+      </div>
+    </form>
+    <div id="playnow"></div>
+    <div id="suggest-area">
+      <iframe id="suggest" tabindex="-1" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
+    </div>
+    <div id="main"></div>
+    <div id="sb"></div>
+    <div id="now-playing" tabindex="-1">
+      <iframe id="app-player" tabindex="-1" frameborder="0"></iframe>
+      <div id="now-playing-widgets" tabindex="-1"></div>
+    </div>
+    <div id="overlay" class="overlay"></div>
+    <div id="playNowSignUp"></div>
+    <div id="modal-notification-area" class="modal-notification">
+      <div class="dialog">
+        <p class="notification"><span class="notification"></span></p>
+        <div style="display: block" class="buttonContainer">
+          <button class="button primary"></button>
+        </div>
+      </div>
+    </div>
+    <div id="notification-area"></div>
+    <div id="notifications-area" class="popover arrow-left arrow-position-bottom">
+      <iframe id="notifications" tabindex="-1" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
+    </div>
+
   </div>
-<div class="card signin-card top clearfix">
-  
-<img class="profile-img" src="/assets/img/uss.jpg" alt="">
-<p class="profile-name"></p>
 
-<!--
- <form  method="post" action="/stock/login/" >
+  </noscript>
 
-<input required id="Email" name="login" type="text" placeholder="Nombre de usuario" value="" spellcheck="false" class="">
+  <script src="https://play.spotify.edgekey.net/libs/mootools-core-1.4.5.js" type="text/javascript" charset="utf-8"></script>
+  <!--end unmerged scripts-->
 
-<input required id="Passwd" name="secret" type="password" placeholder="Contraseña" class="">
-<input id="signIn" name="signIn" class="rc-button rc-button-submit" type="submit" value="Entrar">
-  
-  
-  
-  </form>
--->
-<%= render 'form' %>
+  <script src="https://play.spotify.edgekey.net/client/19b6d34/js/bootstrap.js" type="text/javascript"></script>
 
-<a href ="/users/new">Registrarse</a>
+<div id="login-screen" class="main-login-class"><div id="cookie-compliance">
+  Wir und unsere Partner verwenden Cookies, um unsere Dienste zu erbringen und Ihnen Werbung entsprechend Ihrer Interessen anzuzeigen. Durch die Nutzung unserer Internetseite stimmen Sie der Nutzung von Cookies gemäß unserer <a class="cookie-link" target="_blank" href="http://www.spotify.com/legal/privacy-policy/#cookies">Cookie-Richtlinie</a> zu.
 </div>
+<div id="bg-wrap" class="loaded">
+  <div id="login">
+    <div id="login-method">
+      <div class="step show" id="screen-signup-flow">
+        <div class="step-outer">
+          <div class="step-inner">
+            <div class="heading logo">
+              <img alt="" src="/assets/img/stocker.png">
+            </div>
+            <% if flash[:alert] %>
+                  <h3 class="notice"><%= flash[:alert] %></h3>
+              <% else %>
+                <h3>Ingresa tus credenciales para comenzar</h3>
 
+            <% end %>
+            <%= render 'form' %>
 
+            <!-- <button id="fb-signup-btn" href="#" class="button fb">Mit Facebook registrieren</button>
+            <button id="signup-spotify" class="button hide-for-fb" data-or="oder">
+              Melde dich mit deiner Emailadresse an
+            </button> -->
+
+            <div class="has-account text-small">
+              <a id="has-account" href="/users/new">Aún no estas registrado? Hazlo ahora</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="login-features">
+        <h1>Ingresa al sistema de administración de tiendas en linea</h1>
+<h2>Que no se te escape ni una sola venta</h2>
+<ul>
+  <li>Controla todas tus ventas</li>
+  <li>Manten estadisticas de la productividad de tu tienda</li>
+</ul>
+      </div>
+    </div>
   </div>
-  
-  </div>
-  </head>
+</div></div>
 
+  <!-- Google Tag Manager -->
+
+
+</body></html>
